--- a/package.json
+++ b/package.json
@@ -40,13 +40,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.1",
     "framer-motion": "^11.14.1",
     "geist": "^1.3.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.468.0",
     "nanoid": "^5.0.9",
     "next": "^15.0.1",
+    "node-mailjet": "^6.0.8",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -62,6 +65,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
