--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-intersection-observer": "^9.14.0",
+    "react-swipeable": "^7.0.2",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.5",
