--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.2",
+    "@sentry/nextjs": "^9.22.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@tanstack/react-virtual": "^3.13.8",
@@ -49,7 +50,7 @@
     "jszip": "^3.10.1",
     "lucide-react": "^0.468.0",
     "nanoid": "^5.0.9",
-    "next": "^15.0.1",
+    "next": "^15.3.0",
     "node-mailjet": "^6.0.8",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
